# somanyfeeds.rs

./: .gitignore  AGENTS.md  CHAT_HISTORY.md  Cargo.toml  README.md
apps/somanyfeeds_server/: Cargo.toml  askama.toml
apps/somanyfeeds_server/resources/public/: app.css
apps/somanyfeeds_server/resources/templates/: articles.html
apps/somanyfeeds_server/src/: about.rs  app.rs  articles.rs  env.rs  feeds.rs  lib.rs  main.rs  routes.rs  worker.rs
apps/somanyfeeds_server/tests/: app_tests.rs  articles_tests.rs  env_tests.rs  feeds_tests.rs  routes_tests.rs  worker_limit_tests.rs  worker_tests.rs
pkgs/feeds_processing/: Cargo.toml
pkgs/feeds_processing/resources/test_samples/: bluesky.xml  damo.io.xml
pkgs/feeds_processing/src/: atom.rs  downloads.rs  error.rs  feed_parsing.rs  lib.rs  rss.rs
pkgs/feeds_processing/tests/: download_content_tests.rs  feed_parsing_tests.rs
src/: main.rs  tests.rs
tests/: app_tests.rs
