[package]
name = "somanyfeeds_server"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
askama.workspace = true
askama_axum.workspace = true
serde.workspace = true
chrono.workspace = true
feeds_processing.workspace = true

[dev-dependencies]
wiremock.workspace = true
